--- a/src/main/resources/config/log4j.properties
+++ b/src/main/resources/config/log4j.properties
@@ -12,7 +12,7 @@ log4j.appender.R.File=${catalina.home}/logs/little.log
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=[%-5p] %d(%r) --> [%t] %l: %m %x %n
 
-
+#日志级别
 log4j.logger.org=info
 log4j.logger.org.springframework=info
 log4j.logger.com.little=info
