日志输出级别调整

--- a/src/main/resources/config/log4j.properties
+++ b/src/main/resources/config/log4j.properties
@@ -1,19 +1,19 @@
-log4j.rootLogger=info,console
+log4j.rootLogger=info,F,console
 #控制台
 log4j.appender.console = org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target = System.out
 log4j.appender.console.layout = org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern = [%d{yy-MM-dd HH:mm:ss}] %-5p - %m%n
 #日志文件
-log4j.appender.R=org.apache.log4j.FileAppender
-log4j.appender.R.Threshold=DEBUG
-log4j.appender.R.Append=true
-log4j.appender.R.File=${catalina.home}/logs/little.log
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=[%-5p] %d(%r) --> [%t] %l: %m %x %n
+log4j.appender.F=org.apache.log4j.FileAppender
+log4j.appender.F.Threshold=DEBUG
+log4j.appender.F.Append=true
+log4j.appender.F.File=${catalina.home}/logs/little.log
+log4j.appender.F.layout=org.apache.log4j.PatternLayout
+log4j.appender.F.layout.ConversionPattern=[%-5p] %d(%r) --> [%t] %l: %m %x %n
 
 #日志级别
 log4j.logger.org=info
 log4j.logger.org.springframework=info
-log4j.logger.com.little=info
+log4j.logger.com=info
 log4j.logger.org.hibernate=ERROR
