--- a/src/main/resources/config/log4j.properties
+++ b/src/main/resources/config/log4j.properties
@@ -15,5 +15,5 @@ log4j.appender.F.layout.ConversionPattern=[%-5p] %d(%r) --> [%t] %l: %m %x %n
 #日志级别
 log4j.logger.org=info
 log4j.logger.org.springframework=info
-log4j.logger.com=info
+log4j.logger.com.little=info
 log4j.logger.org.hibernate=ERROR
